<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|bottom|left|right"
    android:layout_margin="18dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_Dialog_storedAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/DialogStoredAddress_StoredAddreses"
        android:textColor="@color/littleFlora_pink"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="10dp"
        android:background="@color/Gray" />

    <TextView
        android:id="@+id/txt_Dialog_useAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/DialogStoredAddress_UseAsBilling"
        android:textColor="@color/littleFlora_pink"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spi_SelectAddress_Billing"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/txt_Dialog_useAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/DialogStoredAddress_UseAsShipping"
        android:textColor="@color/littleFlora_pink"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spi_SelectAddress_Shipping"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/chk_useAsBilling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DialogStoredAddress_AddNewBillingAddress" />

        <CheckBox
            android:id="@+id/chk_useAsShipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DialogStoredAddress_AddNewShippingAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_Dialog_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/background_pinkbutton"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/DialogByNow_continue"
        android:textColor="@color/selector_fortextview_white"
        android:textSize="20sp" />

</LinearLayout>