<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|bottom|left|right"
    android:layout_margin="18dp"
    android:orientation="vertical" >
    
	<TextView
	    android:id="@+id/txt_sharing_sharewith"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/littleFlora_pink"
	    android:textSize="20sp"
	    android:text="@string/Contactus_contactus"
	    android:gravity="center_horizontal"
	    />
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="2px"
	    android:layout_marginTop="10dp"
	    android:background="@color/Gray"
	    />
	
	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_sharing_sharewith_facebook"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/selector_fortextview_gray"
	    android:textSize="20sp"
	    android:layout_marginTop="10dp"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/contactus_location"
	    android:drawablePadding="5dp"
	    android:text="@string/Contactus_firstline"
	    />
	

	
	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_sharing_sharewith_twitter"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/selector_fortextview_gray"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/contactus_location"
	    android:drawablePadding="5dp"
	    android:textSize="20sp"
	    android:layout_marginTop="15dp"
	    android:text="@string/Contactus_secondline"
	    />
	


	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_sharing_sharewith_instagram"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/selector_fortextview_gray"
	    android:textSize="20sp"
	    android:layout_marginTop="15dp"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/contactus_telephone"
	    android:drawablePadding="5dp"
	    android:text="@string/Contactus_telephone"
	    />
	


	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_sharing_sharewith_pintrest"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/selector_fortextview_gray"
	    android:textSize="20sp"
	    android:layout_marginTop="15dp"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/contactus_email"
	    android:drawablePadding="5dp"
	    android:text="@string/Contactus_email"
	    />
	
		
</LinearLayout>
