<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|bottom|left|right"
    android:layout_margin="18dp"
    android:orientation="vertical" >
    
	<TextView
	    android:id="@+id/txt_SortDialog_sortBy"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/littleFlora_pink"
	    android:textSize="20sp"
	    android:text="@string/SortDialog_sortBy"
	    android:gravity="center_horizontal"
	    />
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="2px"
	    android:layout_marginTop="10dp"
	    android:background="@color/Gray"
	    />
	
	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_SortDialog_pricehightolow"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/Gray"
	    android:textSize="20sp"
	    android:layout_marginTop="10dp"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/height_to_low"
	    android:drawablePadding="15dp"
	    android:text="@string/SortDialog_pricehightolow"
	    />
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:layout_marginTop="10dp"
	    android:background="@color/Gray"
	    />
	
	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_SortDialog_pricelowtohigh"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/Gray"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/low_to_height"
	    android:drawablePadding="15dp"
	    android:textSize="20sp"
	    android:layout_marginTop="10dp"
	    android:text="@string/SortDialog_pricelowtohigh"
	    />
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:layout_marginTop="10dp"
	    android:background="@color/Gray"
	    />

	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_SortDialog_positionhightolow"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/Gray"
	    android:textSize="20sp"
	    android:layout_marginTop="10dp"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/height_to_low"
	    android:drawablePadding="15dp"
	    android:text="@string/SortDialog_positionhightolow"
	    />
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:layout_marginTop="10dp"
	    android:background="@color/Gray"
	    />

	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_SortDialog_positionlowtohigh"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/Gray"
	    android:textSize="20sp"
	    android:layout_marginTop="10dp"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/low_to_height"
	    android:drawablePadding="15dp"
	    android:text="@string/SortDialog_positionlowtohigh"
	    />
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:layout_marginTop="10dp"
	    android:background="@color/Gray"
	    />

	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_SortDialog_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/Gray"
	    android:textSize="20sp"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/sku"
	    android:drawablePadding="15dp"
	    android:layout_marginTop="10dp"
	    android:text="@string/SortDialog_name"
	    />
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:layout_marginTop="10dp"
	    android:background="@color/Gray"
	    />

	<TextView
	    android:paddingTop="4dp"
	    android:id="@+id/txt_SortDialog_sku"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/Gray"
	    android:textSize="20sp"
	    android:layout_marginTop="10dp"
	    android:paddingLeft="10dp"
	    android:drawableLeft="@drawable/name"
	    android:drawablePadding="15dp"
	    android:text="@string/SortDialog_sku"
	    />
	
</LinearLayout>
