<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|bottom|left|right"
    android:layout_margin="18dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_sharing_sharewith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/SharetheApp_shareappvia"
        android:textColor="@color/littleFlora_pink"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="10dp"
        android:background="@color/Gray" />

    <TextView
        android:id="@+id/txt_sharing_sharewith_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/sharing_facebook"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:text="@string/ProductsDescription_SharingwithFacebook"
        android:textColor="@color/selector_fortextview_gray"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/Gray" />

    <TextView
        android:id="@+id/txt_sharing_sharewith_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/sharing_twitter"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:text="@string/ProductsDescription_SharingwithTwitter"
        android:textColor="@color/selector_fortextview_gray"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/Gray" />

    <TextView
        android:id="@+id/txt_sharing_sharewith_linkedin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/followus_linkedin"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:text="@string/followus_linkedin"
        android:textColor="@color/selector_fortextview_gray"
        android:textSize="20sp" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/Gray" />

    <TextView
        android:id="@+id/txt_sharing_sharewith_whatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/sharewith_whatsapp"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:text="@string/SharetheApp_shareappvia_whatsapp"
        android:textColor="@color/selector_fortextview_gray"
        android:textSize="20sp" />    

</LinearLayout>